<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="230dp"
  android:background="@drawable/edges"
  android:padding="10dp">

<TextView 
	android:text="@string/select_paring" 
	android:id="@+id/TxtRegionTitle" 
	android:layout_width="213dp" 
	android:layout_height="wrap_content"
	android:textSize="20sp"
	android:textColor="@color/title"
	android:paddingBottom="2dp"></TextView>
<ImageButton 
	android:id="@+id/DelButtonPairing" 
	android:layout_toRightOf="@id/TxtRegionTitle" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:layout_marginLeft="40dp"
	android:background="@drawable/delete"
	android:clickable="true"
	android:visibility="gone"></ImageButton>

<ScrollView 
	android:id="@+id/ScrollView01" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:layout_below="@id/TxtRegionTitle"
	android:paddingLeft="15dp"
	android:paddingTop="5dp">
		<RelativeLayout 
			android:id="@+id/RelativeLayout01" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content">
				<TextView 
					android:text="@string/wine_Amarone" 
					android:id="@+id/wine_Amarone" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Barbera" 
					android:id="@+id/wine_Barbera" 
					android:layout_below="@id/wine_Amarone" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Barolo" 
					android:id="@+id/wine_Barolo" 
					android:layout_below="@id/wine_Barbera" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Beaujolais" 
					android:id="@+id/wine_Beaujolais" 
					android:layout_below="@id/wine_Barolo" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Bordeaux" 
					android:id="@+id/wine_Bordeaux" 
					android:layout_below="@id/wine_Beaujolais" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Brunello" 
					android:id="@+id/wine_Brunello" 
					android:layout_below="@id/wine_Bordeaux" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Cab_Sauvignon" 
					android:id="@+id/wine_Cab_Sauvignon" 
					android:layout_below="@id/wine_Brunello" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Chablis" 
					android:id="@+id/wine_Chablis" 
					android:layout_below="@id/wine_Cab_Sauvignon" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Champagne" 
					android:id="@+id/wine_Champagne" 
					android:layout_below="@id/wine_Chablis" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Chardonnay" 
					android:id="@+id/wine_Chardonnay" 
					android:layout_below="@id/wine_Champagne" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Chateauneuf" 
					android:id="@+id/wine_Chateauneuf" 
					android:layout_below="@id/wine_Chardonnay" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Chianti" 
					android:id="@+id/wine_Chianti" 
					android:layout_below="@id/wine_Chateauneuf" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Gewurztraminer" 
					android:id="@+id/wine_Gewurztraminer" 
					android:layout_below="@id/wine_Chianti" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Grenache" 
					android:id="@+id/wine_Grenache" 
					android:layout_below="@id/wine_Gewurztraminer" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Merlot" 
					android:id="@+id/wine_Merlot" 
					android:layout_below="@id/wine_Grenache" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Nebbiolo" 
					android:id="@+id/wine_Nebbiolo" 
					android:layout_below="@id/wine_Merlot" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Pinot_Grigio" 
					android:id="@+id/wine_Pinot_Grigio" 
					android:layout_below="@id/wine_Nebbiolo" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Pinot_Noir" 
					android:id="@+id/wine_Pinot_Noir" 
					android:layout_below="@id/wine_Pinot_Grigio" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Port" 
					android:id="@+id/wine_Port" 
					android:layout_below="@id/wine_Pinot_Noir" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Riesling" 
					android:id="@+id/wine_Riesling" 
					android:layout_below="@id/wine_Port" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Rioja" 
					android:id="@+id/wine_Rioja" 
					android:layout_below="@id/wine_Riesling" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Sangiovese" 
					android:id="@+id/wine_Sangiovese" 
					android:layout_below="@id/wine_Rioja" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Shiraz" 
					android:id="@+id/wine_Shiraz" 
					android:layout_below="@id/wine_Sangiovese" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Valpolicella" 
					android:id="@+id/wine_Valpolicella" 
					android:layout_below="@id/wine_Shiraz" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				<TextView 
					android:text="@string/wine_Zinfandel" 
					android:id="@+id/wine_Zinfandel" 
					android:layout_below="@id/wine_Valpolicella" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:textSize="17dp"
					android:clickable="true"></TextView>
				
					
		</RelativeLayout>
</ScrollView>
</RelativeLayout>
